// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Auth on tokens unchanged 1`] = `
<div>
  <form
    class="memori-auth-widget--form"
    name="memoriAuth"
  >
    <fieldset
      class="memori-auth-widget--tokens-fieldset"
      name="tokens"
    >
      <legend>
        auth.tokens
        : 
      </legend>
      <label
        class="memori-auth-widget--token"
      >
        <input
          autocomplete="off"
          class="memori-auth-widget--input"
          name="tokens.0"
          placeholder="Recovery token"
          required=""
          type="password"
        />
      </label>
      <button
        class="memori-button memori-button--primary memori-button--md memori-auth-widget--token-add"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__icon"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            role="img"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
        <span
          class="memori-button__content"
        >
          auth.addToken
        </span>
      </button>
      <hr />
      <button
        class="memori-button memori-button--outline memori-button--md"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          auth.usePassword
        </span>
      </button>
    </fieldset>
    <button
      class="memori-button memori-button--primary memori-button--md memori-auth-widget--submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="memori-button__content"
      >
        confirm
      </span>
    </button>
  </form>
</div>
`;

exports[`renders Auth unchanged 1`] = `
<div>
  <form
    class="memori-auth-widget--form"
    name="memoriAuth"
  >
    <fieldset
      class="memori-auth-widget--password-fieldset"
    >
      <label>
        Password:
         
        <input
          class="memori-auth-widget--input"
          name="password"
          placeholder="Password"
          required=""
          type="password"
        />
      </label>
    </fieldset>
    <button
      class="memori-button memori-button--primary memori-button--md memori-auth-widget--submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="memori-button__content"
      >
        confirm
      </span>
    </button>
  </form>
</div>
`;

exports[`renders Auth with modal unchanged 1`] = `
<div
  aria-hidden="true"
  data-base-ui-inert=""
/>
`;

exports[`renders Auth with tokens unchanged 1`] = `
<div>
  <form
    class="memori-auth-widget--form"
    name="memoriAuth"
  >
    <fieldset
      class="memori-auth-widget--password-fieldset"
    >
      <label>
        Password:
         
        <input
          class="memori-auth-widget--input"
          name="password"
          placeholder="Password"
          required=""
          type="password"
        />
      </label>
      <hr />
      <button
        class="memori-button memori-button--outline memori-button--md"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          auth.useRecoveryTokens
        </span>
      </button>
    </fieldset>
    <button
      class="memori-button memori-button--primary memori-button--md memori-auth-widget--submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="memori-button__content"
      >
        confirm
      </span>
    </button>
  </form>
</div>
`;
